<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.AddEmployeeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="text"
            android:hint="@string/hint_full_name"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/edtAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_address"
            android:inputType="text"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/edtPhoto"
            app:layout_constraintEnd_toEndOf="@+id/edtFullName"
            app:layout_constraintStart_toStartOf="@+id/edtFullName"
            app:layout_constraintTop_toBottomOf="@+id/edtFullName" />

        <EditText
            android:id="@+id/edtPhoto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:hint="@string/hint_photo_url"
            app:layout_constraintBottom_toTopOf="@+id/btnAddEmployee"
            app:layout_constraintEnd_toEndOf="@+id/edtAddress"
            app:layout_constraintStart_toStartOf="@+id/edtAddress"
            app:layout_constraintTop_toBottomOf="@+id/edtAddress"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnAddEmployee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_employee"
            app:layout_constraintBottom_toTopOf="@+id/btnEditEmployee"
            app:layout_constraintEnd_toEndOf="@+id/edtPhoto"
            app:layout_constraintStart_toStartOf="@+id/edtPhoto"
            app:layout_constraintTop_toBottomOf="@+id/edtPhoto" />

        <Button
            android:id="@+id/btnEditEmployee"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnAddEmployee"
            app:layout_constraintStart_toStartOf="@+id/btnAddEmployee"
            app:layout_constraintTop_toBottomOf="@+id/btnAddEmployee" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>